--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,12 @@ body {
   font-family: 'Fraunces', serif;
 }
 
+.nav-item{
+  margin-right: 50px;
+}
+
 .jumbotron {
+  height: 50vh;
   border-radius: 0px;
   background-color:rgba(216, 191, 216, 0.4);
 }
@@ -12,17 +17,10 @@ body {
 color: #fff;
 background-color: thistle;
 border: none;
-
 }
 
+.cardRow{
 
-footer {
-  position: absolute;
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
-  background-color: #f5f5f5;
-  margin-top: 50px;
 }
 
 .card {
@@ -42,4 +40,12 @@ footer {
   border-radius: 10px;
 }
 
+footer {
+  position: absolute;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  background-color: #f5f5f5;
+  margin-top: 50px;
+}
 
